--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
     </div>
 </div>
 <!-- contact -->
-<!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI90tw9r9ufk3o5jHs4hmnDryfIW0F4WQ&libraries=places"></script-->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI90tw9r9ufk3o5jHs4hmnDryfIW0F4WQ&libraries=places"></script>
 
 <script>
     google.maps.event.addDomListener(window, 'load', function () {
