--- a/WhatsIn/Views/Home/MyItineraries.cshtml
+++ b/WhatsIn/Views/Home/MyItineraries.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<WhatsIn.Models.ServiceModel>
+﻿@model List<WhatsIn.Models.ItineraryViewModel>
 
 @{
     ViewBag.Title = "My Itinerary";
@@ -9,15 +9,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-xs-12">
-                <h3>#BeDiscovered</h3><br />
-                <div class="form-group">
-                    <button id="CreateNewServiceButton" class="btn btn-success" data-toggle="modal" data-target="#myServiceModal"><span class="fa fa-plus"></span>&nbsp; Post My Business / Service</button>
-                    <!--button id="CreateNewServiceButton" class="btn btn-primary" data-toggle="modal" data-target="#myServiceModal"><i class="fa fa-plus"></i> Post My Business</button-->
-                </div>
+                <h3>#MyItinerary</h3><br />
             </div>
             <div class="col-xs-12">
-                <div id="serviceListDiv">
-                    @{Html.RenderAction("ServiceList", "Home", new { Model = Model });}
+                <div id="itineraryListDiv">
+                    @{Html.RenderAction("ItineraryList", "Home", new { Model = Model });}
                 </div>
             </div>
 
@@ -133,8 +129,45 @@
                 },
             });
 
+      });
+
+      $('.AddServiceImageButton').click(function (e) {
+
+        e.preventDefault();
+        var serviceId = $(this).prop('id');
+         $.ajax({
+            type: "Get",
+            url: "@Url.Action("MyServiceImages", "Home")",
+            data: {
+                serviceId: serviceId,
+            },
+            success: function (data) {
+                $('#divServiceImageModal').html(data);
+                $('#myServiceImageModal').modal('show');
+            }
+        });
+
+      });
+
+      $(".divItineraryService").each(function (e) {
+          e.preventDefault;
+            var serviceId = $(this).prop('id');            
+            $.ajax({
+                type: "Get",
+                url: "@Url.Action("ItineraryService", "Home")",
+                data: {
+                    serviceId: serviceId,
+                },
+                success: function (data) {
+                    $('.divItineraryService').html(data);
+                },
+            });
+
         });
     });
+
+      
+    
 
 
     $('#btnSave').click(function (e) {
@@ -244,6 +277,43 @@
             });
         }
     });
+
+    $('.ItineraryCompletedButton').click(function (e) {
+        e.preventDefault();
+
+        if (confirm('Have you been here already?')) {
+            var itineraryId = $(this).prop('id');
+             $.ajax({
+                type: "Post",
+                url: "@Url.Action("CompleteItinerary", "Home")",
+                data: {
+                    itineraryId: itineraryId,
+                },
+                success: function (data) {
+                    location.reload();
+                },
+            });
+        }
+    });
+
+    $('.RemoveItineraryButton').click(function (e) {
+        e.preventDefault();
+
+        if (confirm('Are you sure you want to remove this from your Itinerary?')) {
+            var itineraryId = $(this).prop('id');
+             $.ajax({
+                type: "Post",
+                url: "@Url.Action("RemoveItinerary", "Home")",
+                data: {
+                    itineraryId: itineraryId,
+                },
+                success: function (data) {
+                    location.reload();
+                },
+            });
+        }
+    });
+
     google.maps.event.addDomListener(window, 'load', function () {
         var options = {
             componentRestrictions: { country: "ph" }
