--- a/WhatsIn/Views/Home/ServiceList.cshtml
+++ b/WhatsIn/Views/Home/ServiceList.cshtml
@@ -1,21 +1,29 @@
 ﻿@model List<WhatsIn.Models.ServiceModel>
+
+
 <div>
+    <div class="row">&nbsp;</div>
     @for (int i = 0; i < Model.Count(); i++)
     {
-        var item = Model[i];
+        var ctr = i % 3;
 
-
-        @:<div class="row">
-              <div class="col-xs-12 text-center">
-                  <h4><a href="#" id="@item.Id" class="UpdateServiceButton">@item.Name </a></h4>
-
-                  <button id="@item.Id" class="btn btn-circle btn-xs red AddServiceImageButton">
-                      <img id="@item.Id" class="img-thumbnail imgService" alt="Add Image" />
-                  </button><br />
-                  <button data-toggle="modal" id="@item.Id" class="btn btn-success RemoveServiceButton"><span class="fa fa-trash"></span>&nbsp; Remove</button><br /><br /><br />
-              </div>
-       @:</div><div class="row">&nbsp;</div>
-
+        if (ctr == 0)
+        {
+            @:<div class="row">
+            }
+            var item = Model[i];
+            <div class="col-xs-4 text-center">
+                <span style="font-weight:bold"><a href="#" id="@item.Id" class="btn UpdateServiceButton">@item.Name </a></span>&nbsp;
+                <br />
+                <button id="@item.Id" class="btn btn-circle btn-xs red AddServiceImageButton">
+                    <img id="@item.Id" class="img-thumbnail imgService" alt="Add Image" />
+                </button><br />
+                <button data-toggle="modal" id="@item.Id" class="btn btn-circle btn-xs btn-success RemoveServiceButton"><span class="fa fa-trash"></span></button>
+            </div>
+            if ((i == Model.Count() - 1) || (ctr == 2))
+            {
+            @:</div><div class="row">&nbsp;</div>
+        }
 
     }
 </div>
