--- a/WhatsIn/Views/Results/ServiceList.cshtml
+++ b/WhatsIn/Views/Results/ServiceList.cshtml
@@ -9,7 +9,7 @@
                 {
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <span style="font-weight:bold; text-align:center;"><a href="@Url.Action("Details", "Results", new { s = item.Id })" target="_blank" id="@item.Id"> @item.Name</a> </span><br /><br />
+                            <span style="font-weight:bold; text-align:center;"><a href="@Url.Action("Details", "Results", new { s = item.Id })" style="color:#337ab7;" target="_blank" id="@item.Id"> @item.Name</a> </span><br /><br />
                             <span style="font-weight:bold; text-align:center;"> @item.Location </span><br /><br />
                             <img id="@item.Id" class="img-thumbnail imgService " alt="Add Image" />
                     </div>
@@ -25,7 +25,7 @@
                         }
                                   
                         <div class="col-xs-4 text-center">
-                            <span style="font-weight:bold; text-align:center;"><a href="@Url.Action("Details", "Results", new { s = item.Id })" target="_blank" id="@item.Id"> @item.Name</a> </span><br /><br />
+                            <span style="font-weight:bold; text-align:center;"><a href="@Url.Action("Details", "Results", new { s = item.Id })" style="color:#337ab7;" target="_blank" id="@item.Id"> @item.Name</a> </span><br /><br />
                             <span style="font-weight:bold; text-align:center;"> @item.Location </span><br /><br />
                             <img id="@item.Id" class="img-thumbnail imgService " alt="Add Image" />
                         </div>
