--- a/WhatsIn/Views/Results/Index.cshtml
+++ b/WhatsIn/Views/Results/Index.cshtml
@@ -27,18 +27,18 @@
                     }
                     @if (ViewBag.TouristSpots > 0)
                     {
-                        <li><a href="@Url.Action("TouristSpotsList", "Results")"><i class="fa fa-university"></i><span class="badge">@ViewBag.TouristSpots</span></a></li>
+                        <li><button type="button" class="btn btn-link" id="btnTouristSpots"><i class="fa fa-university"></i><span class="badge">@ViewBag.TouristSpots</span></button></li>
                     }
                     @if (ViewBag.BeautyAndRelaxation > 0)
                     {
-                        <li><a href="@Url.Action("BeautyAndRelaxationList", "Results")"><i class="fa fa-eye"></i><span class="badge">@ViewBag.BeautyAndRelaxation</span></a></li>}
+                        <li><button type="button" class="btn btn-link" id="btnBeautyAndRelaxation"><i class="fa fa-eye"></i><span class="badge">@ViewBag.BeautyAndRelaxation</span></button></li>}
                     @if (ViewBag.SportsAndRecreation > 0)
                     {
-                        <li><a href="@Url.Action("SportsAndRecreationList", "Results")"><i class="fa fa-bicycle"></i><span class="badge">@ViewBag.SportsAndRecreation</span></a></li>
+                        <li><button type="button" class="btn btn-link" id="btnSportsAndRecreation"><i class="fa fa-bicycle"></i><span class="badge">@ViewBag.SportsAndRecreation</span></button></li>
                     }
                     @if (ViewBag.ShoppingAndSouvenirs > 0)
                     {
-                        <li><a href="@Url.Action("ShoppingAndSouvenirsList", "Results")"><i class="fa fa-bicycle"></i><span class="badge">@ViewBag.SportsAndRecreation</span></a></li>
+                        <li><button type="button" class="btn btn-link" id="btnShoppingAndSouvenirs"><i class="fa fa-bicycle"></i><span class="badge">@ViewBag.ShoppingAndSouvenirs</span></button></li>
                     }
                 </ul>
                 <div class="col-xs-12">
@@ -275,6 +275,186 @@
         });
     });
 
+    $('#btnTouristSpots').click(function (e) {
+        e.preventDefault();
+        var serviceLoc = $('#service-location').val();
+        var serviceType = "Tourist Spots";
+        $('service-type').val(serviceType);
+
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("GetResult", "Results")",
+            data: {
+                location: serviceLoc,
+                type: serviceType,
+            },
+            success: function (data) {
+                // $("#divResults").empty();
+                //$("#divResults").html(data);
+                $("#serviceListDiv").empty();
+                $("#serviceListDiv").append(data.HTMLString);
+                $('#service-type').val(serviceType);
+                NoMoreData = false;
+                inProgress = false;
+                BlockNumber = 2;
+                  $(".imgService").each(function (e) {
+                                e.preventDefault;
+                                var serviceId = $(this).prop('id');
+
+                                var $image = $(this);
+                                $.ajax({
+                                    type: "Get",
+                                    url: "@Url.Action("GetMyFirstServiceImage","Home")",
+                                    data: {
+                                        serviceId: serviceId,
+                                    },
+                                    success: function (data) {
+                                        if(data != "")
+                                            $image.attr("src", "/Uploads/ServiceImages/" + data);
+                                    },
+                                });
+
+                            });
+            },
+        });
+
+    });
+
+    $('#btnBeautyAndRelaxation').click(function (e) {
+        e.preventDefault();
+        var serviceLoc = $('#service-location').val();
+        var serviceType = "Beauty And Relaxation";
+        $('service-type').val(serviceType);
+
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("GetResult", "Results")",
+            data: {
+                location: serviceLoc,
+                type: serviceType,
+            },
+            success: function (data) {
+                // $("#divResults").empty();
+                //$("#divResults").html(data);
+                $("#serviceListDiv").empty();
+                $("#serviceListDiv").append(data.HTMLString);
+                $('#service-type').val(serviceType);
+                NoMoreData = false;
+                inProgress = false;
+                BlockNumber = 2;
+                  $(".imgService").each(function (e) {
+                                e.preventDefault;
+                                var serviceId = $(this).prop('id');
+
+                                var $image = $(this);
+                                $.ajax({
+                                    type: "Get",
+                                    url: "@Url.Action("GetMyFirstServiceImage","Home")",
+                                    data: {
+                                        serviceId: serviceId,
+                                    },
+                                    success: function (data) {
+                                        if(data != "")
+                                            $image.attr("src", "/Uploads/ServiceImages/" + data);
+                                    },
+                                });
+
+                            });
+            },
+        });
+
+    });
+
+    
+    $('#btnSportsAndRecreation').click(function (e) {
+        e.preventDefault();
+        var serviceLoc = $('#service-location').val();
+        var serviceType = "Sports And Recreation";
+        $('service-type').val(serviceType);
+
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("GetResult", "Results")",
+            data: {
+                location: serviceLoc,
+                type: serviceType,
+            },
+            success: function (data) {
+                // $("#divResults").empty();
+                //$("#divResults").html(data);
+                $("#serviceListDiv").empty();
+                $("#serviceListDiv").append(data.HTMLString);
+                $('#service-type').val(serviceType);
+                NoMoreData = false;
+                inProgress = false;
+                BlockNumber = 2;
+                  $(".imgService").each(function (e) {
+                                e.preventDefault;
+                                var serviceId = $(this).prop('id');
+
+                                var $image = $(this);
+                                $.ajax({
+                                    type: "Get",
+                                    url: "@Url.Action("GetMyFirstServiceImage","Home")",
+                                    data: {
+                                        serviceId: serviceId,
+                                    },
+                                    success: function (data) {
+                                        if(data != "")
+                                            $image.attr("src", "/Uploads/ServiceImages/" + data);
+                                    },
+                                });
+
+                            });
+            },
+        });
+
+    });
+
+    $('#btnShoppingAndSouvenirs').click(function (e) {
+        e.preventDefault();
+        var serviceLoc = $('#service-location').val();
+        var serviceType = "Shopping And Souvenirs";
+        $('service-type').val(serviceType);
+
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("GetResult", "Results")",
+            data: {
+                location: serviceLoc,
+                type: serviceType,
+            },
+            success: function (data) {
+                // $("#divResults").empty();
+                //$("#divResults").html(data);
+                $("#serviceListDiv").empty();
+                $("#serviceListDiv").append(data.HTMLString);
+                $('#service-type').val(serviceType);
+                NoMoreData = false;
+                inProgress = false;
+                BlockNumber = 2;
+                  $(".imgService").each(function (e) {
+                                e.preventDefault;
+                                var serviceId = $(this).prop('id');
+
+                                var $image = $(this);
+                                $.ajax({
+                                    type: "Get",
+                                    url: "@Url.Action("GetMyFirstServiceImage","Home")",
+                                    data: {
+                                        serviceId: serviceId,
+                                    },
+                                    success: function (data) {
+                                        if(data != "")
+                                            $image.attr("src", "/Uploads/ServiceImages/" + data);
+                                    },
+                                });
+
+                            });
+            },
+        });
+
+    });
 
     $(window).scroll(function () {
         var serviceType = $('#service-type').val();
