--- a/WhatsIn/Views/Results/Details.cshtml
+++ b/WhatsIn/Views/Results/Details.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Contact No.(s):</label>
-                <p><a href="tel:@Model.UserContactNumber">@Model.UserContactNumber</a></p>
+                <p><a href="tel:@Model.ServicePhoneNumber">@Model.ServicePhoneNumber</a></p>
             </div>
         </div>
         <div class="row">
